[gd_scene load_steps=5 format=3 uid="uid://ywm5h8dkpwjh"]

[ext_resource type="Script" path="res://Scripts/Global/GameBoy/game_boy.gd" id="1_s02ok"]
[ext_resource type="AudioStream" uid="uid://djnhmy6dxw4bm" path="res://Assets/Audio/SFX/Bib_First.mp3" id="2_e3xso"]
[ext_resource type="AudioStream" uid="uid://b5vt5cf0ijm1" path="res://Assets/Audio/SFX/Bip_Second.mp3" id="3_ykpoy"]
[ext_resource type="AudioStream" uid="uid://c8uk0txrr05tm" path="res://Assets/Audio/SFX/Bip_Final.mp3" id="4_w77lq"]

[node name="gameboy_entity" type="Node2D" groups=["gameboy_entity"]]
script = ExtResource("1_s02ok")
total_time = 6

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FirstClic" type="AudioStreamPlayer2D" parent="Timer"]
stream = ExtResource("2_e3xso")

[node name="SecondClic" type="AudioStreamPlayer2D" parent="Timer"]
stream = ExtResource("3_ykpoy")

[node name="FinalClic" type="AudioStreamPlayer2D" parent="Timer"]
stream = ExtResource("4_w77lq")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
